# boxi

./: .gitignore  CNAME  README.md  _config.yml  dev.boxi.Boxi.yml  pyproject.toml
.well-known/: org.flathub.VerifiedApps.txt
data/share/applications/: dev.boxi.Boxi.desktop  dev.boxi.desktop
data/share/dbus-1/services/: dev.boxi.Boxi.service  dev.boxi.service
data/share/glib-2.0/schemas/: dev.boxi.gschema.xml
data/share/metainfo/: dev.boxi.Boxi.metainfo.xml  dev.boxi.metainfo.xml
src/boxi/: __init__.py  __main__.py  adwaita_palette.py  agent.py  app.py  client.py  monitor.py  toolbox_run.py
